--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,24 @@
 language: generic 
-
 sudo: required
 services:
   - docker
-
 
 before_install:
   - docker build -t kocsisstefan/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true kocsisstefan/react-test npm test -- --coverage
+  - docker run -e CI=true kocsisstefan/react-test npm test
 
-  after_success:
+
+after_success:
   - docker build -t kocsisstefan/multi-client ./client
   - docker build -t kocsisstefan/multi-nginx ./nginx
   - docker build -t kocsisstefan/multi-server ./server
   - docker build -t kocsisstefan/multi-worker ./worker
-
-
-# log in to docker cli: docker login
-- echo "$DOCKER_PASSWORD" | docker login -u "DOCKER_ID" --pasword-stdin
-
-#take those images and psuh them to docker hub
-
-- docker push kocsisstefan/multi-client
-- docker push kocsisstefan/multi-nginx
-- docker push kocsisstefan/multi-server
-- docker push kocsisstefan/multi-worker
+  # Log in to the docker CLI using your credentials
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  # Take those images and push them to docker hub
+  - docker push kocsisstefan/multi-client
+  - docker push kocsisstefan/multi-nginx
+  - docker push kocsisstefan/multi-server
+  - docker push kocsisstefan/multi-worker
