--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_success:
   - docker build -t kocsisstefan/multi-nginx ./nginx
   - docker build -t kocsisstefan/multi-server ./server
   - docker build -t kocsisstefan/multi-worker ./worker
-  # Log in to the docker CLI using your credentials
+  # Log in to the docker CLI using your credentials before commitment to github
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
   - docker push kocsisstefan/multi-client
