--- a/.travis.yml
+++ b/.travis.yml
@@ -25,12 +25,12 @@ after_success:
 
 deploy:
 	provider: elasticbeanstalk
-	region: eu-central-1
-	app: "multi-docker"
-	env: "multi-docker"
-	bucket_name: "elasticbeanstalk-eu-central-1-338624239204"
-	bucket_path: "docker-multi"
+	region: 'eu-central-1'
+	app: 'multi-docker'
+	env: 'multi-docker'
+	bucket_name: 'elasticbeanstalk-eu-central-1-338624239204'
+	bucket_path: 'docker-multi'
 	on:
 		branch: master
-	acess_key_id: $AWS_ACCESS_KEY
+	access_key_id: $AWS_ACCESS_KEY
 	secret_access_key: $AWS_SECRET_KEY
